<resources>
    <string name="app_name">SuiteSensores</string>
    <string name="close_nav">Close</string>
    <string name="open_nav">Open</string>
    <string name="home">Home</string>
    <string name="giroscopio">Giroscopio</string>
    <string name="cr_ditos">Créditos</string>
    <string name="sensor_humedad">Sensor Humedad</string>
    <string name="info">Info</string>
    <string name="sensor_presi_n">Sensor Presión</string>
    <string name="salir">Salir</string>
    <string name="sensores_de_vix">Sensores de Vix</string>
    <string name="icono_de_cada_uno">Icono de cada uno</string>
    <string name="header_del_home">Header del home</string>
    <string name="elige_dificultad">Elige Dificultad</string>
    <string name="hard">Hard</string>
    <string name="ptp">PtP</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="btnRestart">Restart\n</string>
    <string name="tres_en_raya">Tres en Raya!!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activar">Activar</string>
    <string name="pulsa_el_bot_n_para_activar_la_vibraci_n">Pulsa el botón para activar la vibración</string>
    <string name="vibraci_n">Vibración</string>
    <string name="gif_de_homero">Gif de homero</string>
    <string name="sensor_br_jula">Sensor Brújula</string>
    <string name="sensor_pasos">Sensor Pasos</string>
    <string name="brujula">Brujula</string>
    <string name="direcci_n">Dirección:</string>
    <string name="imagen_de_la_br_jula">Imagen de la brújula</string>
    <string name="imagen_de_la_aguja">Imagen de la aguja</string>
    <string name="contador_de_pasos">Contador de Pasos</string>
    <string name="jugar">Jugar</string>
    <string name="pulse_el_boton_para_jugar_al_tres_en_raya">Pulse el boton para jugar al tres en raya</string>
    <string name="para_navegar_por_la_app_pulsa_el_los_iconos_de_la_parte_superior">Para navegar por la app, pulsa sobre los iconos de la parte superior</string>

    <string name="sensores_de_gabriel">Sensores de Gabriel</string>
    <string name="luminosidad">Luminosidad</string>
    <string name="proximidad">Proximidad</string>
    <string name="temperatura">Temperatura</string>
    <string name="suite_jvg">Suite JVG</string>

    <string name="clear">C</string>
    <string name="brackets">( )</string>
    <string name="elevator">^</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="comma">.</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="calculator_results">0</string>
    <string name="calculator_workings">""</string>
    <string name="calcular">Calcular</string>
    <string name="calculadora">Calculadora</string>
    <string name="battery_level">Battery Level</string>
    <string name="suiete_sensores_jvg">Suiete Sensores JVG</string>
    <string name="icono_vix">Icono Vix</string>
    <string name="icono_delegado">Icono delegado</string>
    <string name="icono_jona">Icono Jona</string>

    <!--    jona-->
    <string name="rotacion">Rotacion</string>
    <string name="gravedad">Gravedad</string>
    <string name="acelerometro">Acelerometro</string>
    <string name="sensores_de_jona">Sensores de Jona</string>
    <string name="sensor_Acelerometo">Acelerometo</string>
    <string name="integrantes">Integrantes</string>
    <string name="jonathan_alonzo_jona"><![CDATA[Jonathan Alonzo -> Jona]]></string>
    <string name="v_ctor_dom_nguez_vix"><![CDATA[Víctor Domínguez -> Vix]]></string>
    <string name="gabriel_ramos_delegado"><![CDATA[Gabriel Ramos -> Delegado]]></string>
    <string name="imagen_de_github">Imagen de GitHub</string>
    <string name="enlace_al_github_del_proyecto">Enlace al GitHub del proyecto</string>

</resources>