<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/home"
                android:title="@string/home"/>
        </menu>
    </item>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_giroscopio"
            android:icon="@drawable/giroscope"
            android:title="@string/giroscopio"/>

        <item
            android:id="@+id/nav_humedad"
            android:icon="@drawable/humidity"
            android:title="@string/sensor_humedad"/>

        <item
            android:id="@+id/nav_presion"
            android:icon="@drawable/presion"
            android:title="@string/sensor_presi_n"/>

    </group>


    <item
        android:title="">
        <menu>

            <item
                android:id="@+id/nav_creditos"
                android:icon="@drawable/credits"
                android:title="@string/cr_ditos"/>

            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/info"
                android:title="@string/info"/>

            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/exit"
                android:title="@string/salir"/>
        </menu>
    </item>
</menu>